<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/day_back">

    <Button
        android:id="@+id/exportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startAgainButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:text="@string/export"
        android:textStyle="bold"
        android:typeface="sans" />

    <Button
        android:id="@+id/startAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/exportButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="137dp"
        android:text="@string/startagain" />

    <TextView
        android:id="@+id/trainingfailedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/exportButton"
        android:layout_alignParentLeft="true"
        android:padding="10dp"
        android:text="@string/thankYou"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="serif" />

</RelativeLayout>
